@@ -1,19 +1,19 @@
 package ru.job4j.ood.tdd.cinema;
 
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertThat;
-import static org.hamcrest.Matchers.is;
-
-import org.junit.Ignore;
-import org.junit.Test;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
 import ru.job4j.ood.tdd.cinima.*;
 
-import java.util.Arrays;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
+
 import java.util.Calendar;
 import java.util.List;
 
 public class CinemaTest {
-    @Ignore
+
+    @Disabled
     @Test
     public void whenBuy() {
         Account account = new AccountCinema();
@@ -21,28 +21,29 @@ public class CinemaTest {
         Calendar date = Calendar.getInstance();
         date.set(2020, 10, 10, 23, 00);
         Ticket ticket = cinema.buy(account, 1, 1, date);
-        assertThat(ticket, is(new Ticket3D()));
+        assertEquals(ticket, new Ticket3D());
     }
 
-    @Ignore
+    @Disabled
     @Test
     public void whenFind() {
         Cinema cinema = new Cinema3D();
         cinema.add(new Session3D());
         List<Session> sessions = cinema.find(session -> true);
-        assertThat(sessions, is(Arrays.asList(new Session3D())));
+        assertEquals(sessions, List.of(new Session3D()));
+
     }
 
-    @Ignore
+    @Disabled
     @Test
     public void whenAdd() {
         Cinema cinema = new Cinema3D();
         cinema.add(new Session3D());
         List<Session> sessions = cinema.find(session -> true);
-        assertThat(sessions, is(Arrays.asList(new Session3D())));
+        assertEquals(sessions, List.of(new Session3D()));
     }
 
-    @Ignore
+    @Disabled
     @Test
     public void whenSessionsIsNull() {
         Cinema cinema = new Cinema3D();
@@ -50,35 +51,42 @@ public class CinemaTest {
         assertNull(sessions);
     }
 
-    @Ignore
-    @Test(expected = IllegalArgumentException.class)
+
+    @Disabled
+    @Test()
     public void whenIncorrectDate() {
-        Account account = new AccountCinema();
-        Cinema cinema = new Cinema3D();
-        Calendar date = Calendar.getInstance();
-        date.set(2070, 10, 10, 23, 00);
-        Ticket ticket = cinema.buy(account, 1, 1, date);
+        assertThrows(IllegalArgumentException.class, () -> {
+            Account account = new AccountCinema();
+            Cinema cinema = new Cinema3D();
+            Calendar date = Calendar.getInstance();
+            date.set(2070, 10, 10, 23, 00);
+            Ticket ticket = cinema.buy(account, 1, 1, date);
+        });
     }
 
-    @Ignore
-    @Test(expected = IllegalArgumentException.class)
+    @Disabled
+    @Test()
     public void whenIncorrectSeat() {
-        Account account = new AccountCinema();
-        Cinema cinema = new Cinema3D();
-        Calendar date = Calendar.getInstance();
-        date.set(2020, 10, 10, 23, 00);
-        Ticket ticket = cinema.buy(account, 2000, 2000, date);
+        assertThrows(IllegalArgumentException.class, () -> {
+            Account account = new AccountCinema();
+            Cinema cinema = new Cinema3D();
+            Calendar date = Calendar.getInstance();
+            date.set(2020, 10, 10, 23, 00);
+            Ticket ticket = cinema.buy(account, 2000, 2000, date);
+        });
     }
 
-    @Ignore
-    @Test(expected = IllegalArgumentException.class)
+    @Disabled
+    @Test()
     public void whenSeatIsBusy() {
-        Cinema cinema = new Cinema3D();
-        Calendar date = Calendar.getInstance();
-        date.set(2020, 10, 10, 23, 00);
-        Account account1 = new AccountCinema();
-        Ticket ticket1 = cinema.buy(account1, 5, 5, date);
-        Account account2 = new AccountCinema();
-        Ticket ticket2 = cinema.buy(account2, 5, 5, date);
+        assertThrows(IllegalArgumentException.class, () -> {
+            Cinema cinema = new Cinema3D();
+            Calendar date = Calendar.getInstance();
+            date.set(2020, 10, 10, 23, 00);
+            Account account1 = new AccountCinema();
+            Ticket ticket1 = cinema.buy(account1, 5, 5, date);
+            Account account2 = new AccountCinema();
+            Ticket ticket2 = cinema.buy(account2, 5, 5, date);
+        });
     }
 }
